# shopping_scenario

./: README.md
pr2_moveit_node/config/: ompl_planning.yaml
pr2_moveit_node/launch/: move_group.launch
pr2_moveit_node/models/: pr2.urdf
shopping_scenario/: CMakeLists.txt  package.xml
shopping_scenario_executive/: CMakeLists.txt  package.xml  shopping-scenario-executive.asd
shopping_scenario_executive/launch/: shopping_area.launch  shopping_scenario.launch  shopping_scenario_simulation.launch  start.launch
shopping_scenario_executive/scripts/: start.sh
shopping_scenario_executive/src/: costmap-metadata.lisp  facts.lisp  package.lisp  plan-library.lisp  planner.lisp  planner_v2.lisp  plans.lisp  reasoning.lisp  top-level-plans.lisp  utils.lisp
shopping_scenario_gazebo/: CMakeLists.txt  package.xml
shopping_scenario_gazebo/launch/: pr2.launch  shopping_scenario.launch
shopping_scenario_gazebo/worlds/: shopping_scenario.world
shopping_scenario_maps/: CMakeLists.txt  package.xml
shopping_scenario_maps/launch/: descriptions.launch  json.launch  map.launch  shopping_scenario_maps.launch  transformations.launch
shopping_scenario_maps/map/: shopping_area.yaml
shopping_scenario_models/: CMakeLists.txt  README.md  package.xml
shopping_scenario_models/defs/: helpers.xml  inertia.xml  utils.xml
shopping_scenario_models/models/corn/: corn.urdf.xml
shopping_scenario_models/models/cuboidal/: cuboidal.urdf.xml  model.config
shopping_scenario_models/models/kelloggs/: kelloggs.urdf.xml
shopping_scenario_models/models/lion/: lion.urdf.xml
shopping_scenario_models/models/oregano/: oregano.urdf.xml
shopping_scenario_models/models/pancakemix/: pancakemix.urdf.xml
shopping_scenario_models/models/salt/: salt.urdf.xml
shopping_scenario_models/models/saltdispenser/: saltdispenser.urdf.xml
shopping_scenario_models/models/shopping_area/: shopping_area.urdf.xml  shopping_rack.urdf.xml
shopping_scenario_models/models/shopping_rack/: shopping_rack.urdf.xml
shopping_scenario_models/models/tomatosauce/: tomatosauce.urdf.xml
shopping_scenario_models/models/tubular/: model.config  tubular.urdf.xml
shopping_scenario_models/owl/: objects.owl  shopping_area.owl  shopping_rack.owl
shopping_scenario_reasoning/: .gitignore  CMakeLists.txt  build.gradle  package.xml  settings.gradle
shopping_scenario_reasoning/launch/: shopping_scenario_reasoning.launch
shopping_scenario_reasoning/prolog/: init.pl  shopping_scenario_reasoning.pl
shopping_scenario_reasoning/shopping_scenario_reasoning/: build.gradle
shopping_scenario_reasoning/shopping_scenario_reasoning/src/main/java/org/knowrob/shopping_scenario_reasoning/: RackReasoner.java
