<?xml version="1.0"?>
<package>
  <name>shopping_scenario_reasoning</name>
  <version>0.0.1</version>
  <description>
    
    Shopping scenario related reasoning modules
    
  </description>
  
  <maintainer email="winkler@cs.uni-bremen.de">Jan Winkler</maintainer>
  <author email="winkler@cs.uni-bremen.de">Jan Winkler</author>
  
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>shopping_scenario_models</run_depend>
  
</package>
